update github action

--- a/.github/workflows/docker-circleci-dev.yml
+++ b/.github/workflows/docker-circleci-dev.yml
@@ -6,7 +6,6 @@ on:
   push:
     branches:
       - 'dev/*'
-      - 'jeffo/*'
 
 env:
   REGISTRY: ghcr.io
@@ -43,6 +42,7 @@ jobs:
             type=ref,event=branch
             type=ref,event=tag
             type=ref,event=pr
+            type=raw,value=dev
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
