lambda wait function-updated (#1)
* add calls to `lambda wait function-update`
* separate dev and release github actions

--- a/.github/workflows/docker-circleci-release.yml
+++ b/.github/workflows/docker-circleci-release.yml
@@ -1,15 +1,10 @@
 
-name: Create and publish Docker image
+name: Create and publish Docker image (PROD)
 
 on:
   release:
     types:
       [released]
-
-  push:
-    branches:
-      - 'dev/*'
-      - 'jeffo/*'
 
 env:
   REGISTRY: ghcr.io
